--- a/microservicio-iso25010/pom.xml
+++ b/microservicio-iso25010/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.2.0</version>
+        <version>3.2.12</version>
         <relativePath/>
     </parent>
     
@@ -57,6 +57,12 @@
             <version>${springdoc.version}</version>
         </dependency>
         
+        <!-- Spring Boot Actuator para management endpoints -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+        
         <!-- Utilidades -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -102,4 +108,3 @@
         </plugins>
     </build>
 </project>
-
