--- a/microservicio-iso25010/pom.xml
+++ b/microservicio-iso25010/pom.xml
@@ -63,6 +63,13 @@
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
         
+        <!-- Soporte para archivos .env -->
+        <dependency>
+            <groupId>me.paulschwarz</groupId>
+            <artifactId>spring-dotenv</artifactId>
+            <version>4.0.0</version>
+        </dependency>
+        
         <!-- Utilidades -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
