--- a/microservicio-iso25010/pom.xml
+++ b/microservicio-iso25010/pom.xml
@@ -18,6 +18,7 @@
     <properties>
         <java.version>17</java.version>
         <springdoc.version>2.2.0</springdoc.version>
+        <sonar.organization>eleramirezl9</sonar.organization>
     </properties>
     
     <dependencies>
