--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,39 +1,194 @@
-name: SonarQube
+# ==========================================
+# GitHub Actions Workflow - CI/CD
+# ==========================================
+# Workflow para:
+# - Build y Tests
+# - Análisis de calidad con SonarQube
+# - Reporte de cobertura
+# - Notificaciones de estado
+
+name: CI - Build, Test & SonarQube
+
 on:
   push:
     branches:
       - main
+      - develop
   pull_request:
     types: [opened, synchronize, reopened]
+
 jobs:
-  build:
-    name: Build and analyze
+  # ==========================================
+  # Job 1: Build and Test
+  # ==========================================
+  build-and-test:
+    name: 🔨 Build & Test
     runs-on: ubuntu-latest
     defaults:
       run:
         working-directory: microservicio-iso25010
+
     steps:
-      - uses: actions/checkout@v4
+      # Checkout del código
+      - name: 📥 Checkout code
+        uses: actions/checkout@v4
         with:
-          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
-      - name: Set up JDK 17
+          fetch-depth: 0  # Necesario para SonarQube
+
+      # Setup Java 17
+      - name: ☕ Set up JDK 17
         uses: actions/setup-java@v4
         with:
           java-version: 17
-          distribution: 'zulu' # Alternative distribution options are available.
-      - name: Cache SonarQube packages
-        uses: actions/cache@v4
-        with:
-          path: ~/.sonar/cache
-          key: ${{ runner.os }}-sonar
-          restore-keys: ${{ runner.os }}-sonar
-      - name: Cache Maven packages
+          distribution: 'temurin'
+          cache: 'maven'
+
+      # Cache de Maven
+      - name: 📦 Cache Maven packages
         uses: actions/cache@v4
         with:
           path: ~/.m2
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-          restore-keys: ${{ runner.os }}-m2
-      - name: Build and analyze
+          restore-keys: |
+            ${{ runner.os }}-m2-
+
+      # Build del proyecto
+      - name: 🔨 Build with Maven
+        run: mvn -B clean compile
+
+      # Ejecutar tests
+      - name: 🧪 Run tests
+        run: mvn -B test
+
+      # Publicar resultados de tests
+      - name: 📊 Publish Test Results
+        uses: dorny/test-reporter@v1
+        if: success() || failure()
+        with:
+          name: JUnit Tests
+          path: microservicio-iso25010/target/surefire-reports/*.xml
+          reporter: java-junit
+
+      # Generar reporte de cobertura
+      - name: 📈 Generate Coverage Report
+        if: success()
+        run: mvn -B jacoco:report
+
+      # Upload del reporte de cobertura
+      - name: 📤 Upload coverage to Codecov
+        if: success()
+        uses: codecov/codecov-action@v4
+        with:
+          files: ./microservicio-iso25010/target/site/jacoco/jacoco.xml
+          flags: unittests
+          name: codecov-umbrella
+          fail_ci_if_error: false
+
+  # ==========================================
+  # Job 2: SonarQube Analysis
+  # ==========================================
+  sonarqube:
+    name: 🔍 SonarQube Analysis
+    runs-on: ubuntu-latest
+    needs: build-and-test
+    defaults:
+      run:
+        working-directory: microservicio-iso25010
+
+    steps:
+      # Checkout del código
+      - name: 📥 Checkout code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # Necesario para análisis de SonarQube
+
+      # Setup Java 17
+      - name: ☕ Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: 17
+          distribution: 'temurin'
+          cache: 'maven'
+
+      # Cache de SonarQube
+      - name: 📦 Cache SonarQube packages
+        uses: actions/cache@v4
+        with:
+          path: ~/.sonar/cache
+          key: ${{ runner.os }}-sonar
+          restore-keys: |
+            ${{ runner.os }}-sonar
+
+      # Cache de Maven
+      - name: 📦 Cache Maven packages
+        uses: actions/cache@v4
+        with:
+          path: ~/.m2
+          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+          restore-keys: |
+            ${{ runner.os }}-m2-
+
+      # Análisis de SonarQube
+      - name: 🔍 Analyze with SonarQube
         env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=Eleramirezl9_ProyectoFinalPrimeraFase-QA
+        run: |
+          mvn -B verify \
+          org.sonarsource.scanner.maven:sonar-maven-plugin:sonar \
+          -Dsonar.projectKey=Eleramirezl9_ProyectoFinalPrimeraFase-QA \
+          -Dsonar.organization=eleramirezl9 \
+          -Dsonar.host.url=https://sonarcloud.io
+
+  # ==========================================
+  # Job 3: Package (opcional - solo en main)
+  # ==========================================
+  package:
+    name: 📦 Package Application
+    runs-on: ubuntu-latest
+    needs: [build-and-test, sonarqube]
+    if: github.ref == 'refs/heads/main'
+    defaults:
+      run:
+        working-directory: microservicio-iso25010
+
+    steps:
+      # Checkout del código
+      - name: 📥 Checkout code
+        uses: actions/checkout@v4
+
+      # Setup Java 17
+      - name: ☕ Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: 17
+          distribution: 'temurin'
+          cache: 'maven'
+
+      # Empaquetar aplicación
+      - name: 📦 Package with Maven
+        run: mvn -B package -DskipTests
+
+      # Subir artifact
+      - name: 📤 Upload JAR artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: microservicio-jar
+          path: microservicio-iso25010/target/*.jar
+          retention-days: 30
+
+  # ==========================================
+  # Job 4: Notification (opcional)
+  # ==========================================
+  notify:
+    name: 📢 Send Notification
+    runs-on: ubuntu-latest
+    needs: [build-and-test, sonarqube]
+    if: always()
+
+    steps:
+      - name: 📢 Workflow Status
+        run: |
+          echo "✅ Workflow completed"
+          echo "Build & Test: ${{ needs.build-and-test.result }}"
+          echo "SonarQube: ${{ needs.sonarqube.result }}"
