--- a/microservicio-iso25010/src/main/resources/application-dev.yml
+++ b/microservicio-iso25010/src/main/resources/application-dev.yml
@@ -6,12 +6,13 @@
 # ----------------------------------------
 # BASE DE DATOS H2 PARA DESARROLLO
 # ----------------------------------------
+# IMPORTANTE: Configurar credenciales en archivo .env
 spring:
   datasource:
-    url: jdbc:h2:mem:devdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;MODE=MySQL;DATABASE_TO_LOWER=TRUE;INIT=CREATE DOMAIN IF NOT EXISTS TEXT AS VARCHAR(255)
-    driver-class-name: org.h2.Driver
-    username: dev_user
-    password: dev_secure_password_2025
+    url: ${DB_URL}
+    driver-class-name: ${DB_DRIVER:org.h2.Driver}
+    username: ${DB_USERNAME}
+    password: ${DB_PASSWORD}
   
   # H2 Console habilitada
   h2:
