--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,6 +17,12 @@ on:
   pull_request:
     types: [opened, synchronize, reopened]
 
+permissions:
+  contents: read
+  checks: write
+  pull-requests: write
+  statuses: write
+
 jobs:
   # ==========================================
   # Job 1: Build and Test
@@ -110,6 +116,7 @@ jobs:
       - name: 📊 Publish Test Results
         uses: dorny/test-reporter@v1
         if: success() || failure()
+        continue-on-error: true
         with:
           name: JUnit Tests
           path: microservicio-iso25010/target/surefire-reports/*.xml
