--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,13 +37,13 @@ jobs:
     steps:
       # Checkout del código
       - name: 📥 Checkout code
-        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0  # Necesario para SonarQube
 
       # Setup Java 17
       - name: ☕ Set up JDK 17
-        uses: actions/setup-java@7a6d8a8234af8eb26422e24e3006232cccaa061b # v4.6.0
+        uses: actions/setup-java@v4
         with:
           java-version: 17
           distribution: 'temurin'
@@ -51,7 +51,7 @@ jobs:
 
       # Cache de Maven
       - name: 📦 Cache Maven packages
-        uses: actions/cache@0c45773b623bea8c8e75f6c82b208c3cf94ea4f9 # v4.0.2
+        uses: actions/cache@v4
         with:
           path: ~/.m2
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
@@ -114,7 +114,7 @@ jobs:
 
       # Publicar resultados de tests
       - name: 📊 Publish Test Results
-        uses: dorny/test-reporter@31a54ee7ebcacc03a09ea97a7e5465a47b84aea5 # v1.9.1
+        uses: dorny/test-reporter@v1
         if: success() || failure()
         continue-on-error: true
         with:
@@ -130,7 +130,7 @@ jobs:
       # Upload del reporte de cobertura
       - name: 📤 Upload coverage to Codecov
         if: success()
-        uses: codecov/codecov-action@5c47607acb93fed5485fdbf7232e8a31425f672a # v5.0.2
+        uses: codecov/codecov-action@v5
         with:
           files: ./microservicio-iso25010/target/site/jacoco/jacoco.xml
           flags: unittests
@@ -151,13 +151,13 @@ jobs:
     steps:
       # Checkout del código
       - name: 📥 Checkout code
-        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0  # Necesario para análisis de SonarQube
 
       # Setup Java 17
       - name: ☕ Set up JDK 17
-        uses: actions/setup-java@7a6d8a8234af8eb26422e24e3006232cccaa061b # v4.6.0
+        uses: actions/setup-java@v4
         with:
           java-version: 17
           distribution: 'temurin'
@@ -165,7 +165,7 @@ jobs:
 
       # Cache de SonarQube
       - name: 📦 Cache SonarQube packages
-        uses: actions/cache@0c45773b623bea8c8e75f6c82b208c3cf94ea4f9 # v4.0.2
+        uses: actions/cache@v4
         with:
           path: ~/.sonar/cache
           key: ${{ runner.os }}-sonar
@@ -174,7 +174,7 @@ jobs:
 
       # Cache de Maven
       - name: 📦 Cache Maven packages
-        uses: actions/cache@0c45773b623bea8c8e75f6c82b208c3cf94ea4f9 # v4.0.2
+        uses: actions/cache@v4
         with:
           path: ~/.m2
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
@@ -253,11 +253,11 @@ jobs:
     steps:
       # Checkout del código
       - name: 📥 Checkout code
-        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+        uses: actions/checkout@v4
 
       # Setup Java 17
       - name: ☕ Set up JDK 17
-        uses: actions/setup-java@7a6d8a8234af8eb26422e24e3006232cccaa061b # v4.6.0
+        uses: actions/setup-java@v4
         with:
           java-version: 17
           distribution: 'temurin'
@@ -269,7 +269,7 @@ jobs:
 
       # Subir artifact
       - name: 📤 Upload JAR artifact
-        uses: actions/upload-artifact@6f51ac03b9356f520e9adb1b1b7802705f340c2b # v4.5.0
+        uses: actions/upload-artifact@v4
         with:
           name: microservicio-jar
           path: microservicio-iso25010/target/*.jar
