--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,35 @@
 {
-    "java.compile.nullAnalysis.mode": "automatic",
+    "java.compile.nullAnalysis.mode": "disabled",
     "java.configuration.updateBuildConfiguration": "interactive",
     "java.debug.settings.onBuildFailureProceed": true,
+    "java.home": "C:\\Users\\eddyr\\OneDrive\\Escritorio\\oracleJdk-25",
+    "maven.terminal.useJavaHome": true,
+    "java.jdt.ls.java.home": "C:\\Users\\eddyr\\OneDrive\\Escritorio\\oracleJdk-25",
+    "java.test.config": {
+        "workingDirectory": "${workspaceFolder}\\microservicio-iso25010",
+        "env": {
+            "JAVA_HOME": "C:\\Users\\eddyr\\OneDrive\\Escritorio\\oracleJdk-25"
+        },
+        "vmArgs": [
+            "--add-opens", "java.base/java.lang=ALL-UNNAMED",
+            "--add-opens", "java.base/java.util=ALL-UNNAMED",
+            "--add-opens", "java.base/java.lang.reflect=ALL-UNNAMED",
+            "--add-opens", "java.base/java.text=ALL-UNNAMED",
+            "--add-opens", "java.base/java.io=ALL-UNNAMED",
+            "--add-opens", "java.base/java.net=ALL-UNNAMED",
+            "--add-opens", "java.base/java.nio=ALL-UNNAMED",
+            "--add-opens", "java.base/sun.nio.ch=ALL-UNNAMED",
+            "--add-opens", "java.base/java.security=ALL-UNNAMED",
+            "--add-opens", "java.base/jdk.internal.reflect=ALL-UNNAMED",
+            "--add-opens", "java.management/sun.management=ALL-UNNAMED",
+            "-Dnet.bytebuddy.experimental=true"
+        ]
+    },
+    "maven.executable.path": "${workspaceFolder}\\microservicio-iso25010\\mvnw.cmd",
+    "terminal.integrated.env.windows": {
+        "JAVA_HOME": "C:\\Users\\eddyr\\OneDrive\\Escritorio\\oracleJdk-25",
+        "PATH": "C:\\Users\\eddyr\\OneDrive\\Escritorio\\oracleJdk-25\\bin;${env:PATH}"
+    },
     "sonarlint.connectedMode.project": {
         "connectionId": "eleramirezl9",
         "projectKey": "Eleramirezl9_ProyectoFinalPrimeraFase-QA"
