--- a/microservicio-iso25010/.mvn/jvm.config
+++ b/microservicio-iso25010/.mvn/jvm.config
@@ -1,1 +1,13 @@
--Xmx512m 
+-Xmx512m
+--add-opens java.base/java.lang=ALL-UNNAMED
+--add-opens java.base/java.util=ALL-UNNAMED
+--add-opens java.base/java.lang.reflect=ALL-UNNAMED
+--add-opens java.base/java.text=ALL-UNNAMED
+--add-opens java.base/java.io=ALL-UNNAMED
+--add-opens java.base/java.net=ALL-UNNAMED
+--add-opens java.base/java.nio=ALL-UNNAMED
+--add-opens java.base/sun.nio.ch=ALL-UNNAMED
+--add-opens java.base/java.security=ALL-UNNAMED
+--add-opens java.base/jdk.internal.reflect=ALL-UNNAMED
+--add-opens java.management/sun.management=ALL-UNNAMED
+-Dnet.bytebuddy.experimental=true
